# cr2-mega-sequia

./: Analisis_inicio_sequia.ipynb  README.md  Untitled.ipynb  dashboard.py  get_cr2_data.ipynb  precipitaciones.csv  requirements.txt
causal_impact/: README.md  causal_impact_one_experiment.R  dashboard.py  pyproject.toml  utils.py
causal_impact/example_data/: input_causal_impact.feather  input_causal_impact_one_experiment.csv  parameters_for_r.json
causal_impact/notebooks/: generate_example_data.ipynb  process_volkswagen_data.ipynb
causal_impact/src/: dashboard.py  generate_data.ipynb  get_cr2_data.ipynb  requirements.txt
causal_impact/src/example_data/: input_causal_impact_one_experiment.csv  parameters_for_r.json  results_causal_impact_from_r.feather  volks_data_clean.feather
data/: datos_pib.csv  precipitaciones.csv
data_raw/: Cuadro_2.xls  mon_pr_region.csv
preprocessing/notebooks/: 10_read_data.ipynb  Analisis_inicio_sequia.ipynb
